# perceptron

./: .gitignore
data/: train_neurons_dump.txt
src/: CMakeLists.txt  Dataset.cpp  Hyperplane.cpp  Image.cpp  Pattern.cpp  Perceptron.cpp  PerceptronNetwork.cpp  README.md  Sample.cpp  hyperplane.h  main.cpp  perceptron.h  readers.cpp  test.cpp  test.h  utils.cpp  utils.h
